--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-query": "^3.39.3",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
@@ -27,8 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "serve": "json-server src/db.json --watch --port 3001"  },
   "eslintConfig": {
     "extends": [
       "react-app",
