--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
@@ -30,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "json-server src/db.json --watch --port 3001"
+    "serve": " json-server --watch src/db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
